fix table size on mobile 2

--- a/boris.css
+++ b/boris.css
@@ -238,6 +238,6 @@
 
 @media screen and (max-width: 576px) {
   .table tbody td.title {
-    min-width: none;
+    min-width: 0;
   }
 }
